Align lightdm entries Fixes #63

--- a/share/themes/Kali-Dark/gtk-3.0/gtk.css
+++ b/share/themes/Kali-Dark/gtk-3.0/gtk.css
@@ -5179,6 +5179,8 @@ wnck-pager {
     border-color: rgba(35, 37, 46, 0.3);
     min-height: 32px;
     box-shadow: inset 0 1px rgba(255, 255, 255, 0.05), 0 1px 2px rgba(0, 0, 0, 0.4); }
+    .lightdm-gtk-greeter #login_window entry image {
+      margin: 0; }
   .lightdm-gtk-greeter #login_window #buttonbox_frame {
     padding-top: 20px;
     background: #23252e;
