--- a/src/themes/Kali/sass/gtk-sass/_applications.scss
+++ b/src/themes/Kali/sass/gtk-sass/_applications.scss
@@ -76,6 +76,8 @@ wnck-pager {
       min-height: 32px;
       box-shadow: inset 0 1px transparentize(white, .95),
                   0 1px 2px opacify($shadow_color, 0.1);
+
+      image { margin: 0; }
     }
 
     #buttonbox_frame {
